# financial-pipeline

./: .gitignore  CHANGELOG.md  DEV_LOG.md  LICENSE  README.md  start.sh
backend/: pyproject.toml
backend/src/pipeline/: __init__.py  api.py  chat.py  config_loader.py  config_writer.py  database.py  engine.py  forex_service.py  models.py  portfolio.py  projections.py  robinhood_parser.py  telegram_bot.py
backend/tests/: test_engine.py
config/: example-config.yaml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatDrawer.jsx  Dashboard.jsx  ForexRate.jsx  History.jsx  IncomeTimeline.jsx  PipelineFlow.jsx  Portfolio.jsx  RecurringExpenses.jsx  RobinhoodReport.jsx  Settings.jsx
